# Solipath

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: async_loop.rs  lib.rs  main.rs  path_buf_ext.rs
src/download_verifier/: download_checker.rs  fake_decompressor.rs  install_file_looper.rs  main.rs  moveable_home_directory_finder.rs  unfiltered_platform.rs
src/solipath/: main.rs
src/solipath_cli/: cli.rs
src/solipath_commandline/: command_executor.rs  install_command_executor.rs  looping_install_command_executor.rs
src/solipath_dependency_download/: dependency_downloader.rs  looping_dependency_downloader.rs  mod.rs
src/solipath_dependency_metadata/: dependency.rs
src/solipath_directory/: mod.rs  moveable_home_directory_finder.rs  solipath_directory_finder.rs
src/solipath_download/: conditional_file_downloader.rs  dependency_downloader.rs  file_decompressor.rs  file_downloader.rs  file_name_retriever.rs  file_to_string_downloader.rs  looping_dependency_downloader.rs  mod.rs
src/solipath_environment_variable/: environment_setter.rs  looping_environment_setter.rs  mod.rs
src/solipath_execute/: command_with_path_executor.rs  mod.rs
src/solipath_instructions/: dependency_instructions_retriever.rs  looping_dependency_instructions_retriever.rs  mod.rs
src/solipath_instructions/data/: dependency.rs  dependency_instructions.rs  download_instruction.rs  environment_variable.rs  install_command.rs  install_instructions.rs  mod.rs  template.rs
src/solipath_platform/: current_platform_retriever.rs  mod.rs  platform.rs  platform_filter.rs
src/solipath_shell/: command_executor.rs  install_command_executor.rs  install_command_filter.rs  looping_install_command_executor.rs  mod.rs
src/solipath_template/: looping_template_retriever.rs  mod.rs  template_retriever.rs  template_variable_replacer.rs
tests/: mod.rs
tests/resources/: 7z_file.7z  file_in_7z.txt  mySymlink  simple_file.txt  tar_bz2_file.tar.bz2  tar_bz2_file.txt  tar_xz_file.tar.xz  tar_zst_file.tar.zst  testdmg.dmg
tests/resources/test_solipath_base_dir/java/11.0.10+9/: install_instructions.json
tests/resources/test_solipath_base_dir_with_bad_java_path/java/11.0.10+9/: install_instructions.json
tests/resources/test_solipath_base_dir_with_bad_java_path/node/14.16.0/: install_instructions.json
tests/resources/test_solipath_with_local_downloads/PerfectMatchDependency/1.0.1/: install_instructions.json
tests/resources/test_solipath_with_local_downloads/PerfectMatchDependency/templates/: template1.json
