[package]
name = "solipath"
version = "0.1.0"
authors = ["brian"]
edition = "2018"

[lib]
name = "solipath_lib"
path = "src/lib.rs"

[[bin]]
name = "solipath"
path = "src/main.rs"

[features]
expensive_tests = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0.61"
dirs-next = "2.0.0"
reqwest = "0.11.0"
tokio = {version = "1.1.0", features = ["full"]}
tempfile = "3.2.0"
async-trait = "0.1.42"
futures = "0.3.8"
tar = "0.4.32"
#zip = "0.5.9"
#using this until main zip has option for symlinks
zip = {git = "https://github.com/bfrazho/zip.git"}
flate2 = "1.0.14"
hyperx = "1.3.0"

[dev-dependencies]
mockall = "0.9.0"