[package]
name = "solipath"
version = "0.1.0"
authors = ["brian"]
edition = "2018"

[lib]
name = "solipath_lib"
path = "src/lib.rs"

# just need to move around some of the dependencies into folders
[[bin]]
name = "solipath"
path = "src/solipath/main.rs"

# executable that recursively loops through all dependencies in current directory, does proper variable replacement, then checks if resulting url is valid
[[bin]]
name = "download_verifier"
path = "src/download_verifier/main.rs"

[features]
expensive_tests = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
dirs-next = "2.0.0"
reqwest = {version = "0.11.13", default-features=false, features = ["rustls-tls"]}
tokio = {version = "1.21.0", features = ["full"]}
tempfile = "3.3.0"
async-trait = "0.1.57"
futures = "0.3.24"
tar = "0.4.38"
#zip = "0.6.4"
#using this until main zip has option for symlinks
zip = {git = "https://github.com/bfrazho/zip.git"}
flate2 = "1.0.24"
hyperx = "1.4.0"
glob = "0.3.0"
sevenz-rust = "0.1.4"
lzma-rs = "0.2.0"


#openssl = {version = "0.10.41", features = ["vendored"]}

[dev-dependencies]
mockall = "0.11.2"
