[package]
name = "solipath"
version = "0.1.0"
authors = ["brian"]
edition = "2021"

[lib]
name = "solipath_lib"
path = "src/lib.rs"

# just need to move around some of the dependencies into folders
[[bin]]
name = "solipath"
path = "src/solipath/main.rs"

# executable that recursively loops through all dependencies in current directory, does proper variable replacement, then checks if resulting url is valid
[[bin]]
name = "download_verifier"
path = "src/download_verifier/main.rs"

[features]
expensive_tests = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
dirs-next = "2.0.0"
reqwest = {version = "0.11.26", default-features=false, features = ["rustls-tls"]}
tokio = {version = "1.36.0", features = ["full"]}
tempfile = "3.10.1"
async-trait = "0.1.82"
futures = "0.3.30"
tar = "0.4.40"
#zip = "0.6.4"
#using this until main zip has option for symlinks
zip = {git = "https://github.com/bfrazho/zip.git"}
flate2 = "1.0.28"
hyperx = "1.4.0"
glob = "0.3.1"
sevenz-rust = "0.5.4"
lzma-rs = "0.3.0"
bzip2-rs = {git = "https://github.com/paolobarbolini/bzip2-rs.git"}
dmg = "0.1.2"
anyhow = "1.0.86"


[dev-dependencies]
mockall = "0.12.1"
warp = "0.3.7"
crossbeam = "0.8.4"
